--- a/arcana/styles/system-styles.css
+++ b/arcana/styles/system-styles.css
@@ -4,6 +4,32 @@
     align-content: center;
 }
 
+.periciaHeader{
+    display: flex;
+    flex-direction: row;
+    align-content: space-evenly;
+}
+
+.pH2Tr{
+    margin-left: 22%;
+}
+
+.pH2A{
+    margin-left: 3%;
+}
+
+.pH2O{
+    margin-left: 2.5%;
+}
+
+.pH2Tt{
+    margin-left: 15%;
+}
+
+.fichaColumnWrapper h2{
+    font-size: small;
+}
+
 .fichaColumn{
     width: 48%;
     margin: 0 auto;
@@ -35,10 +61,57 @@
     font-size: x-large;
 }
 
+.periciaRow{
+    display: flex;
+    flex-direction: row;
+    align-content: space-evenly;
+    margin-bottom: 5px;
+}
+
 .periciasAtributoWrapper{
     border: 1px solid black;
     border-radius: 3px;
-    width: 10%;
+    width: 8%;
+    height: auto;
+    margin-left: 1%;
+    margin-right: 1%;
     text-align: center;
     font-size: large;
+}
+
+.periciasAtributoWrapper2{
+    width: 15%;
+    margin-right: 5%;
+}
+
+.periciasAtributoWrapperTotal{
+    border: 1px solid black;
+    border-radius: 3px;
+    width: 8%;
+    height: auto;
+    margin-left: 12%;
+    text-align: center;
+    font-size: large;
+}
+
+.inventarioWrapper{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    
+}
+
+.inventarioColumn{
+    width: 95%;
+    margin-right: 2%;
+}
+
+.cargaSoisColumn{
+    display: flex;
+    flex-direction: row;
+}
+
+.cargaRow{
+    display: flex;
+    flex-direction: row;
 }
